tests/errors/semantic_error_3.fm
PASTA_RAIZ "/home/usuario/documentos";
REGRA SE $DATA_MODIFICACAO MENOR_QUE "01-01-2024" ENTAO MOVER_PARA "/antigos"; // Formato de data incorreto (esperado YYYY-MM-DD)
